2003-08-07  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/z80/ralloc.c (joinPushes): made compatible with new signedness

	Changes to support big endian targets:

	* src/ports.h
	* src/SDCCglue.c
	* src/avr/main.c
	* src/ds390/main.c
	* src/izt/i186.c
	* src/mcs51/main.c
	* src/pic/main.c
	* src/pic16/main.c
	* src/xa51/main.c
	* src/z80/main.c

2003-08-06  Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCval.c (cheapestVal): changed behaviour to the same as constVal()
	* device/lib/time.c: fixed warning "integer overflow in expression"

2003-08-05  Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCval.c (cheapestVal, valueFromLit): use TYPE_* types
	* src/SDCCval.c (constVal): changed default to signed; hex and octal
	constants are unsigned; added recognition of "u" flag for unsigned
	* src/SDCCval.c (valMult): fixed signdness, added warning for overflow
	* src/SDCCval.c (valDiv, valMod): fixed signdness
	* src/SDCCicode.c (operandOperation): fixed critical typo; fixed
	signedness of modulo, left and right shift
	* support/Util/SDCCerr.c: added warning "integer overflow in expression"
	* support/Util/SDCCerr.h: added warning W_INT_OVL
	* src/SDCCast.c (decorateType): fixed gcc3.3 warning
	* src/SDCCast.c (ast_print): improved output of constants

2003-08-04  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	Fixed some warnings when building with MSVC:

	* as\mcs51\asdata.c
	* as\z80\asdata.c
	* as\mcs51\asm.h
	* as\z80\asm.h
	* link\z80\aslink.h
	* link\z80\lkdata.c
	* link\z80\lkeval.c
	* link\z80\lkgb.c
	* link\z80\lkihx.c
	* link\z80\lks19.c
	* link\z80\lksym.c
	* support\cpp2\cpplib.c
	* src\ds390\gen.c
	* src\mcs51\gen.c
    
2003-08-03  Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCast.c (constExprTree): fix bug #781827 by Carl Worth <cworth@isi.edu>

2003-08-01  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	* support\librarian\clean.mk: Do not remove Makefile.
	* support\librarian\Makefile: added.
